Enable Java 14 experimental features when starting app via spring-boot:run